[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/game_book_select.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-book-select.png" type="Texture2D" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://components/book_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="FontFile" id=6]
[ext_resource path="res://art-built/button-done-big.png" type="Texture2D" id=7]
[ext_resource path="res://components/spell_button_list.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/scroll_container_draggable.gd" type="Script" id=9]
[ext_resource path="res://art-built/button-back-small.png" type="Texture2D" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.501961 )
border_width_top = 2
border_width_bottom = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_color = Color( 0.752941, 0.752941, 0.752941, 1 )
shadow_size = 3

[node name="root" type="Node"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="bg" type="Sprite2D" parent="ui"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )

[node name="selected_books_hbox" type="HBoxContainer" parent="ui"]
editor/display_folded = true
anchor_right = 1.0
offset_top = 124.0
offset_bottom = 344.0
theme_override_constants/separation = 0
alignment = 1

[node name="slot" parent="ui/selected_books_hbox" instance=ExtResource( 5 )]
offset_left = 60.0
offset_right = 200.0
size_flags_horizontal = 0

[node name="slot2" parent="ui/selected_books_hbox" instance=ExtResource( 5 )]
offset_left = 200.0
offset_right = 340.0
size_flags_horizontal = 0

[node name="slot3" parent="ui/selected_books_hbox" instance=ExtResource( 5 )]
offset_left = 340.0
offset_right = 480.0
size_flags_horizontal = 0

[node name="text" type="Label" parent="ui"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 59.0
offset_right = 174.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource( 6 )
text = "Select your books"
align = 1

[node name="play_button" type="TextureButton" parent="ui"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -154.0
offset_right = 32.0
offset_bottom = -36.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="panel" type="Panel" parent="ui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -426.0
offset_bottom = -190.0
theme_override_styles/panel = SubResource( 1 )

[node name="spell_button_list" parent="ui" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -254.0
offset_top = -600.0
offset_right = 241.0
offset_bottom = -450.0

[node name="books_scroll" type="ScrollContainer" parent="ui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -418.0
offset_bottom = -192.0
script = ExtResource( 9 )

[node name="books_hbox" type="HBoxContainer" parent="ui/books_scroll"]
offset_right = 840.0
offset_bottom = 220.0
theme_override_constants/separation = 0

[node name="control" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]

[node name="control2" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]
offset_left = 140.0
offset_right = 280.0

[node name="control3" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]
offset_left = 280.0
offset_right = 420.0

[node name="control4" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]
offset_left = 420.0
offset_right = 560.0

[node name="control5" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]
offset_left = 560.0
offset_right = 700.0

[node name="control6" parent="ui/books_scroll/books_hbox" instance=ExtResource( 5 )]
offset_left = 700.0
offset_right = 840.0

[node name="back_button" type="TextureButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -100.0
offset_right = 151.0
offset_bottom = -12.0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

